--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,8 @@ body {
 }
 #root {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 div.centrify {
     position: absolute;
